--- a/DotnetIntro2024/DotnetIntro2024.csproj
+++ b/DotnetIntro2024/DotnetIntro2024.csproj
@@ -76,6 +76,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Code\DbTools.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
