--- a/DotnetIntro2024/DotnetIntro2024.csproj
+++ b/DotnetIntro2024/DotnetIntro2024.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\dbo.Classi.sql" />
     <Content Include="App_Data\dbo.Studenti.sql" />
     <Content Include="App_Data\Registro.mdf" />
     <Content Include="App_Data\Registro_log.ldf">
